Config db con Ãexito, proyecto levanta exito

--- a/_01_UsuarioPerfil_Trainee/src/main/resources/application.properties
+++ b/_01_UsuarioPerfil_Trainee/src/main/resources/application.properties
@@ -1,1 +1,29 @@
 spring.application.name=_01_UsurioPerfil_Trainee
+
+# Server Configuration
+server.port=9000
+
+# PostgreSQL Database
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/royalspring_ddbb}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:royalspring}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:royalspring}
+spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER_CLASS_NAME:org.postgresql.Driver}
+
+# JPA / Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Para inicializar data.sql (opcional)
+spring.jpa.defer-datasource-initialization=true
+
+# Inicializacion SQL
+spring.sql.init.mode=always
+
+application.app.title=Tutorial Hibernate y Spring Data JPA - CRUD Basico con Relacion One-to-One
+application.app.version=v1.0.0
+application.app.description=Este proyecto se centra en el mapeo de una relacion `One-to-One`, uno de los tipos de asociacion mas comunes.
+application.app.developer=Royal Spring
+
